Add the current number of tickets to the ticket pool according to the configuration